refactor: commit changes related to code structure
Remove separate files for file upload handler middlewares, rename model for saving details about the band, update route methods, update swagger docs
